# snowlaps

./: #README.org#  .gitignore  .pre-commit-config.yaml  Hello.py  README.md  README.org  app.py  dev-environment.yml  environment.yml  requirements-dev.txt  ruff.toml  setup.cfg  start_app.sh
.github/scripts/: generate_pip_deps_from_conda.py
.github/workflows/: main.yml
.streamlit/: pages.toml
app/: Intro.py  app.py
app/pages/: 1_Snowlaps_forward.py  2_Snowlaps_inverse.py  3_Get_support.py  Snowlaps_inversion.py  introduction.py  snowlaps_forward.py  snowlaps_inversion.py
data/emulator/: snowlaps_emulator_v1.h5
data/inputs/: snicar_config_for_emulator.yaml
data/irradiance/: Finseflux_level1_30min.csv
data/optimization_results/: results_inversion_30deg_anisotropy_correction_Chevrollier2024_TC.csv  results_inversion_60deg_anisotropy_correction_Chevrollier2024_TC.csv  snowlaps_best_emulator_spectra_20240813_221053.csv  snowlaps_best_optimizations_20240813_215851.csv  snowlaps_best_optimizations_20240813_220354.csv  snowlaps_best_optimizations_20240813_220653.csv  snowlaps_best_optimizations_20240813_221053.csv  (+4 more)
examples/: make_figure1.py  make_figure2.py  make_figure3.py  make_figureA1.py  make_figureA2.py  snowlaps_ex01_forward_run.py  snowlaps_ex02_optimization.py  snowlaps_ex03_compare_with_biosnicar.py
pages/: Snowlaps_inversion.py
snowlaps/: flycheck_snowlaps.py  snowlaps.py  snowlaps.py~
snowlaps_emulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_snowlaps.py  test_snowlaps.py~
(+14 files in other folders)
