[metadata]
name = snowlaps
version = 0.1.0
description = Deep learning emulator of the Radiative Transfer Model biosnicar
author = Adrien Wehrlé, Lou-Anne Chevrollier
url = https://github.com/cryobiogeo-projects/snowlaps-emulator

[options]
packages = find:
install_requires =
  numpy
  panda	
  tensorflow
  pysolar
  pytz
  timezonefinder
  sklearn

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    snowlaps-cli = snowlaps.snowlaps:SnowlapsEmulator
