[metadata]
name = snowlaps-emulator
version = 0.1.0
description = Deep learning emulator for snow spectral albedo
author = Adrien Wehrlé and Lou-Anne Chevrollier
url = https://github.com/openosmia/snowlaps-emulator

[options]
packages = find:
install_requires =

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    snowlaps-cli = snowlaps.snowlaps:SnowLapsEmulator
